k8s/postgres-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: db
#  namespace: voting
  labels:
    app: post 
    env: prod  
spec: 
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: post 
    env: prod
