k8s/redis-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: redis
#  namespace: voting
  labels:
    app: redis-service
    env: prod 
spec: 
  ports:
  - port: 6379
    targetPort: 6379
  selector: 
    app: redis-deploy
    env: prod
