k8s/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
 # namespace: voting
  labels: 
    app: result-app
    env: prod 
 # annotations:
 #   cloud.google.com/backend-config: '{"default": "my-backendconfig"}' 
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: result 
    env: prod
