k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-namebasedvhost-routing
  annotations:
    # External Load Balancer
    spec.ingressClassName: "gce"  
    # Static IP for Ingress Service
    kubernetes.io/ingress.global-static-ip-name: "gke-ingress-extip1"   
    # Google Managed SSL Certificates
    networking.gke.io/managed-certificates: managed-cert-for-ingress
    # SSL Redirect HTTP to HTTPS
    networking.gke.io/v1beta1.FrontendConfig: "my-frontend-config"   
    # External DNS - For creating a Record Set in Google Cloud Cloud DNS
    external-dns.alpha.kubernetes.io/hostname: default-ingress.saagarpalace.com
spec:  
   # SSL Certs - Associate using Kubernetes Secrets         
  tls:
  - secretName: app1-secret   #  voting-app
  - secretName: app2-secret    # result-app   
  defaultBackend:
    service:
      name: voting-service
      port:
        number: 80     
  rules:
    - host: voting-app.saagarpalace.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voting-service
                port: 
                  number: 80
    - host: result-app.saagarpalace.com
      http:
        paths:                  
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result-service
                port: 
                  number: 80
